--- a/styles/base.css
+++ b/styles/base.css
@@ -42,16 +42,22 @@
     color: white; 
     width: 600px;
     margin: 0 auto; 
+    display: flex;
+    justify-content: space-between;  
+    align-items: center;
+    flex-wrap: wrap;  /
   }
  
   nav ul {
     list-style: none;
     padding: 0;
+    display: flex;
+    margin: 0;
   }
 
   nav li {
     font-size: 18px;  
-    margin-bottom: 8px;
+    margin-bottom: 0 10px;
     
   }
   
@@ -165,12 +171,25 @@
   }
 
   @media screen and (max-width: 767px) {
-   main {
+   
+    nav {
+      flex-direction: column;  
+      align-items: flex-start;  
+    }
+    nav ul {
+      flex-direction: column;  
+      align-items: flex-start;  
+    }
+  
+    nav li {
+      margin: 5px 0;  
+    }
+    main {
     padding: 10px;
   }
 
-  .card {
-    padding: 10px;
+   .card {
+      padding: 10px;
   }
   }
 
