--- a/styles/base.css
+++ b/styles/base.css
@@ -174,11 +174,11 @@
    
     nav {
       flex-direction: column;  
-      align-items: flex-start;  
+      align-items: center;  
     }
     nav ul {
       flex-direction: column;  
-      align-items: flex-start;  
+      align-items: center;  
     }
   
     nav li {
