--- a/styles/base.css
+++ b/styles/base.css
@@ -43,9 +43,9 @@
     width: 600px;
     margin: 0 auto; 
     display: flex;
-    justify-content: space-between;  
+    justify-content: space-between; /* Distribute items horizontally */
     align-items: center;
-    flex-wrap: wrap;  /
+    flex-wrap: wrap; /* Allow items to wrap to the next row */
   }
  
   nav ul {
@@ -76,12 +76,13 @@
     margin-left: 1rem;
     font-weight: normal;
   }
+
   main {
     max-width: 580px;  
     margin: 0 auto;  
     padding: 20px;  
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr);  
+    display: grid;  
+    grid-template-columns: 2fr 1fr; /* Mostrar en dos columnas en la vista normal */
     gap: 20px; 
   }
   
@@ -90,6 +91,9 @@
     border: 1px solid #ccc;
     border-radius: 10px;
     padding: 0px;
+    max-width: 100%;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+
   }
   
   
@@ -120,28 +124,21 @@
   }
   
   main h2 {
-    width: 580px;  
+    width: 100%;  
     position: relative; 
     margin: 0 auto;  
-   text-align: center;
+    text-align: center;
   }
-  
- 
-  main h2::after {
-    content: "";   
-    display: block;  
-    width: 100%; 
-    height: 1px;  
-    background-color: #000;  
-    position: absolute;  
-    bottom: 0px; 
-    left: 0;  
-  }
+   
   .information {
-    width: 100%;  
-    margin: 0 auto;  
-    max-width: 580px;  
-    text-align: center; 
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 0px;
+    width: 200px;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+
+ 
+
   }
   .information p {
     text-align: center; 
@@ -172,28 +169,21 @@
   }
 
   @media screen and (max-width: 767px) {
-   
-    nav {
-      flex-direction: column;  
-      align-items: center;  
-    }
-    nav ul {
-      flex-direction: column;  
-      align-items: center;  
+    main {
+      grid-template-columns: 1fr; /* Volver a una sola columna en la vista móvil */
+      padding: 10px;
     }
   
-    nav li {
-      margin: 5px 0;  
-    }
-    main {
-    padding: 10px;
-    grid-template-columns: 1fr;
-  }
-
-   .card {
+    .card {
       padding: 10px;
+    }
   }
-  }
+  
+  
+  
+  
+  
+  
 
 
  
