--- a/styles/base.css
+++ b/styles/base.css
@@ -43,9 +43,9 @@
     width: 600px;
     margin: 0 auto; 
     display: flex;
-    justify-content: space-between; /* Distribute items horizontally */
+    justify-content: space-between;  
     align-items: center;
-    flex-wrap: wrap; /* Allow items to wrap to the next row */
+    flex-wrap: wrap;  
   }
  
   nav ul {
@@ -82,7 +82,7 @@
     margin: 0 auto;  
     padding: 20px;  
     display: grid;  
-    grid-template-columns: 2fr 1fr; /* Mostrar en dos columnas en la vista normal */
+    grid-template-columns: 2fr 1fr;  
     gap: 20px; 
   }
   
@@ -171,28 +171,27 @@
   @media screen and (max-width: 767px) {
     
     header {
-      width: 100%; /* Hacer que el header ocupe el 100% del ancho de la pantalla en dispositivos móviles */
-      padding: 10px; /* Añadir espacio alrededor del contenido en dispositivos móviles */
+      width: 100%;   
+      padding: 10px;  
       text-align: center;
     }
   
     header h1 {
-      font-size: 1.5rem; /* Reducir el tamaño del encabezado h1 en dispositivos móviles */
-      margin-left: 0; /* Eliminar el margen izquierdo en dispositivos móviles */
+      font-size: 1.5rem;  
+      margin-left: 0;  
       text-align: center;
     }
   
     header img {
-      max-width: 100px; /* Limitar el ancho de la imagen en dispositivos móviles */
-      padding-left: 50px; /* Eliminar el relleno izquierdo en dispositivos móviles */
+      max-width: 100px;  
+      padding-left: 50px;  
     }
     nav {
-      width: 100%; /* Hacer que el nav ocupe el 100% del ancho en dispositivos móviles */
-      text-align: center;
-      padding-left: 200px;
+      width: 100%;  
+      text-align: center;     
     }
     nav ul {
-      flex-direction: column; /* Mostrar elementos en columna en dispositivos móviles */
+      flex-direction: column;  
       align-items: center;
     }
     
@@ -202,7 +201,7 @@
     }
     
     main {
-      grid-template-columns: 1fr; /* Volver a una sola columna en la vista móvil */
+      grid-template-columns: 1fr; 
       padding: 10px;
     }
     h2 {
