--- a/styles/base.css
+++ b/styles/base.css
@@ -46,6 +46,7 @@
     justify-content: space-between;  
     align-items: center;
     flex-wrap: wrap;  
+    min-height: 50px;
   }
  
   nav ul {
@@ -54,10 +55,12 @@
     display: flex;
     margin: 0;
   }
-
+ 
   nav li {
     font-size: 18px;  
-    margin-bottom: 0px 10px;
+    margin-bottom:  10px;
+    height: auto;
+    line-height: 24px;
     
   }
   
@@ -68,7 +71,13 @@
     display: block;  
     text-align: center;
   }
-
+  a:hover::after {
+    content: ""; 
+    display: block;
+    height: 2px; 
+    background-color: #c2f607; 
+    
+  }
   
   h1 {
     color: #fff;
@@ -191,13 +200,16 @@
       text-align: center;     
     }
     nav ul {
-      flex-direction: column;  
-      align-items: center;
+      display: none;
+      padding: 10px 0;
+      visibility: hidden;
     }
     
     nav li {
-      text-align: center;
-      margin: 5px 0;
+      
+      font-size:18px;
+      margin-bottom: 10px;
+      height: auto;
     }
     
     main {
