--- a/lesson03/styles/styles.css
+++ b/lesson03/styles/styles.css
@@ -38,3 +38,10 @@ p {
 .body-font {
     font-family: 'Corbel', sans-serif;
 }
+
+footer{
+    text-align: center;
+    background-color: #f0f0f0;
+    width: 100%;
+    
+}
