--- a/lesson03/styles/styles.css
+++ b/lesson03/styles/styles.css
@@ -20,6 +20,7 @@ body {
 }
 h1 {
     color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 p {
     color: #555;
@@ -32,16 +33,16 @@ p {
 
  
 .heading-font {
-    font-family: 'Candara Bold', sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 .body-font {
-    font-family: 'Corbel', sans-serif;
+    font-family: 'Helvetica', sans-serif;
 }
 
 footer{
     text-align: center;
     background-color: #f0f0f0;
     width: 100%;
-    
+
 }
