--- a/styles/base.css
+++ b/styles/base.css
@@ -158,6 +158,7 @@
     width: 600px; 
     background-color:#1d4d72;  
     padding: 10px 0;  
+    margin-top: 10px;
     text-align: center;
     color: #fff; 
    
