--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -283,11 +283,11 @@ footer {
 }
 
 input:checked + .slider {
-  background-color: #f5cfeb;
+  background-color: #767676;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #f5cfeb;
+  box-shadow: 0 0 1px #767676;
 }
 
 input:checked + .slider:before {
