--- a/chamber/styles/base - copia.css
+++ b/chamber/styles/base - copia.css
@@ -234,7 +234,7 @@ footer {
     }
 
     .cta h2 {
-        font-size: 1.2rem; /* Tamaño de fuente más pequeño en dispositivos móviles */
+        font-size: 1.2rem;  
     }
 
 }
