--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -77,8 +77,8 @@ h1 {
 }
 .menu-switch {
     position: absolute;
-    top: 10px; /* Adjust the top position as needed */
-    right: 20px; /* Adjust the right position as needed */
+    top: 10px;  
+    right: 20px;  
 }
 .switch {
     position: relative;
@@ -260,14 +260,14 @@ footer {
   height: 34px;
 }
 
-/* Hide default HTML checkbox */
+ 
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
-/* The slider */
+ 
 .slider {
   position: absolute;
   cursor: pointer;
@@ -306,7 +306,7 @@ input:checked + .slider:before {
   transform: translateX(26px);
 }
 
-/* Rounded sliders */
+ 
 .slider.round {
   border-radius: 34px;
 }
