--- a/styles/base.css
+++ b/styles/base.css
@@ -91,10 +91,42 @@
     margin: 0 auto;  
     padding: 20px;  
     display: grid;  
-    grid-template-columns: 2fr 1fr;  
-    gap: 20px; 
+    text-align: center;
   }
-  
+
+  .image-container {
+    position: relative;
+    display: inline-block;
+}
+
+.image-container img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+.image-label {
+    position: absolute;
+    bottom: 250px;
+    left: 38%; /* Centrar el texto horizontalmente */
+    transform: translateX(-50%); /* Centrar el texto horizontalmente */
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 5px 10px;
+    font-size: 30px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.card-wrapper {
+  display: flex;
+  justify-content: space-between;
+  max-width: 100%;
+}
+ 
+  .card-wrapper .card {
+    flex: 1;
+    max-width: calc(50% - 20px);
+}
     
   .card {
     border: 1px solid #ccc;
@@ -217,6 +249,10 @@
       grid-template-columns: 1fr; 
       padding: 10px;
     }
+
+    .image-label {
+      font-size: 14px;
+  }
     h2 {
       text-align: center;
 
