--- a/styles/base.css
+++ b/styles/base.css
@@ -107,7 +107,7 @@
 .image-label {
     position: absolute;
     bottom: 250px;
-    left: 38%; /* Centrar el texto horizontalmente */
+    left: 25%;  
     transform: translateX(-50%); /* Centrar el texto horizontalmente */
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
