--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -244,7 +244,7 @@ footer {
 
 @media screen and (min-width: 769px) {
     nav ul {
-        display: flex;  /
+        display: flex;  
     }
 }
 
