--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -121,13 +121,6 @@ nav ul li a {
 main {
     padding: 20px;
 }
-.flex-container {
-    display: flex; /* Utilizamos flexbox para alinear en una fila */
-    flex-wrap: wrap; /* Permitimos que los elementos se envuelvan si no caben en una sola línea */
-    justify-content: space-between; /* Distribuimos el espacio entre las secciones */
-    margin-top: 15px;
-}
-
 
 .current-events {
     flex: 2;  
@@ -241,9 +234,16 @@ footer {
     text-align: center;
     padding: 10px 0;
 }
-
+/* styles for descovery page */
+.flex-container {
+    display: flex;  
+    flex-wrap: wrap;  
+    justify-content: space-between; /* Distribuimos el espacio entre las secciones */
+    
+}
 .sidebar {
-    padding: 10px; /* Add spacing around the entire sidebar */
+    flex:1;
+   padding-right: 10px;   
 }
 
 .sidebar a {
@@ -266,6 +266,11 @@ footer {
     text-decoration: underline;
     text-align: center;
 }
+.image-gallery {
+    flex: 2;
+    /* Estilos para la galería de imágenes, según tus necesidades */
+}
+
 
 @media screen and (min-width: 769px) {
     nav ul {
@@ -340,11 +345,6 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-
- 
-
-
-
 @media screen and (max-width: 768px) {
     .menu {
         flex-direction: column; 
@@ -402,6 +402,14 @@ input:checked + .slider:before {
      .advertisement {
     margin-bottom: 10px;  
     max-width: 100%;  
+    }
+    .flex-container {
+        flex-direction: column;
+    }
+
+    .sidebar,
+    .image-gallery {
+        flex: 1; /* Ambos ocupan el ancho completo en la vista de móvil */
     }
     
 }
