--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -128,6 +128,7 @@ main {
     margin-right: 10px;
     padding-left: 20px;
     font-size: 1.2rem; 
+    text-decoration: none
 }
 .current-events h2 {
     font-size: 2rem;
@@ -135,6 +136,12 @@ main {
     border-bottom: 2px solid #333;  
     width: 95%; /* Ajustamos el ancho de la línea al 80% del contenedor */
     padding-bottom: 5px;  
+    text-decoration: none
+    
+}
+.current-events a {
+    text-decoration: none;
+    color: #a02c32;
 }
 .weather-card {
     flex: 1;  
@@ -239,6 +246,7 @@ footer {
     display: flex;  
     flex-wrap: wrap;  
     justify-content: space-between;  
+    text-decoration: none
     
 }
 .sidebar {
