--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -252,6 +252,7 @@ footer {
 .sidebar {
    flex:1;
    padding-right: 50px;   
+   max-width: 100%;
 }
 
 .sidebar a {
@@ -274,11 +275,33 @@ footer {
     text-decoration: underline;
     text-align: center;
 }
-.image-gallery {
-    flex: 2;
-     
+#visit-message {
+    font-weight: bold;
+    font-size: 22px;
 }
 
+.image-gallery {
+    flex: 2;
+    max-width: 100%;
+     
+}
+.image-gallery .image {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    grid-gap: 10px;
+}
+
+.image-gallery picture img {
+    max-width: 100%; /* Asegura que las imágenes se adapten al ancho del contenedor */
+    height: auto;
+}
+
+.image-gallery .image img:hover {
+    opacity: 0.7; /* Reduce opacity to 70% on hover */
+}
+
+
+/* STYLES FOR MEDIA*/
 
 @media screen and (min-width: 769px) {
     nav ul {
@@ -414,10 +437,17 @@ input:checked + .slider:before {
     .flex-container {
         flex-direction: column;
     }
+    .sidebar {
+        max-width: 100%;  
+        padding-right: 0;  
+    }
 
     .sidebar,
     .image-gallery {
         flex: 1; /* Ambos ocupan el ancho completo en la vista de móvil */
+    }
+    .image-gallery .image picture:hover {
+        box-shadow: none;  
     }
     
 }
