--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -201,7 +201,7 @@ main {
 .cta a {
     display: block;  
     margin-top: 10px;
-    background-color: #df6a68;  
+    background-color: #a02c32;  
     color: #fff;  
     text-decoration: none;
     padding: 10px;
