--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -311,7 +311,7 @@ footer {
     opacity: 0.7;  
 }
 /* STYLES JOIN FORM */
-main .container{
+main .contenedor{
     display: grid;
     grid-template-columns: 1fr 1fr; /* Divide en dos columnas de igual ancho */
     grid-gap: 20px; /* Espacio entre las columnas */
