--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -311,7 +311,7 @@ footer {
     opacity: 0.7;  
 }
 /* STYLES JOIN FORM */
-main .contenedor{
+main .container-form{
     display: grid;
     grid-template-columns: 1fr 1fr; /* Divide en dos columnas de igual ancho */
     grid-gap: 20px; /* Espacio entre las columnas */
@@ -325,14 +325,14 @@ fieldset {
     margin-right: 20px; /* Add some spacing between form and benefits in larger views */  
     margin-left: 200px;
     background-color: #fbefee;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .benefits-container {
     max-width: 40%; 
     background-color: #fbefee;
     padding: 20px;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 .benefits-container h2 {
     color: #a02c32;
@@ -382,7 +382,7 @@ input{
     
 }
 textarea {
-    width: 90%; /* Ancho del textarea en un 80% del contenedor */
+    width: 80%; /* Ancho del textarea en un 80% del contenedor */
     height: 8em; /* Altura del textarea en 10 ems */
 }
 
