--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -310,35 +310,50 @@ footer {
 .image-gallery .image img:hover {
     opacity: 0.7;  
 }
-/* STYLES JOIN FORM */
+/* ----------STYLES JOIN FORM ---------------------*/
+.centered-content {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente el contenido */
+    align-items: center; /* Centra verticalmente el contenido (opcional) */
+    
+  }
 main .container-form{
     display: grid;
     grid-template-columns: 1fr 1fr; /* Divide en dos columnas de igual ancho */
     grid-gap: 20px; /* Espacio entre las columnas */
+    justify-content: center; /* Centra los elementos horizontalmente */
+    text-align: center;
+    margin: 0 auto; 
     
-  }
-
-fieldset {
-     
-    max-width: 100%; /* Adjust the width as needed */
-    float: left; /* Float the form to the left in smaller views */
-    margin-right: 20px; /* Add some spacing between form and benefits in larger views */  
-    margin-left: 200px;
+}
+.form-fieldset {
+    
     background-color: #fbefee;
-    margin-top: 50px;
+    margin-top: 30px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    display: inline-block;
 }
 
 .benefits-container {
-    max-width: 40%; 
+   
     background-color: #fbefee;
-    padding: 20px;
-    margin-top: 50px;
+    margin-top: 0;
+    display: inline-block;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 .benefits-container h2 {
     color: #a02c32;
     border-bottom: 2px solid #a02c32; /* Línea de subrayado */
-    padding-bottom: 10px; /* Espacio entre el texto y la línea de subrayado */
+    padding-bottom: 0px; /* Espacio entre el texto y la línea de subrayado */
+    
+  } 
+
+.benefits-column  {
+    padding-bottom: 30px;
   }
+  
 
   .benefits-container h2::before,
   .benefits-container h2::after {
@@ -461,15 +476,15 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
-.form-container {
+/* .form-container {
     float: left; /* Float the form to the left in larger views */
-    margin-right: 20px; /* Add some spacing between form and benefits */
-}
-
-.benefits-container {
-    width: calc(100% - 420px); /* Adjust the width of the benefits container based on the form width and margin */
-    float: right; /* Float the benefits container to the right */
-}
+    /* margin-right: 20px; /* Add some spacing between form and benefits 
+} */
+ 
+/*.benefits-container {
+    /* width: calc(100% - 420px); /* Adjust the width of the benefits container based on the form width and margin */
+    /* float: right; /* Float the benefits container to the right  
+} */
 
 
 /* ESTILOS VERSION MOVIl */
