--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -372,7 +372,7 @@ form label.top{
     display: block;
     padding-top: 1rem;
     color: #a92306;
-    font-size: .9rem;
+    font-size: 1rem;
 }
 
 form label.sbs{
